[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
response_json = []
response_cbor = []

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "postgres", "macros", "rust_decimal", "chrono" ] }
dotenv = "0.15"
redis = { version = "0.23", features = [ "r2d2", "ahash", "cluster-async", "tokio-comp", "connection-manager" ] }
#futures = { version = "0.3" }
lazy_static = { version = "1.4" }
serde = { version = "1.0", features = [ "derive" ] }
#bincode = { version = "1.3" }
#serde_json = { version = "1.0" }
tokio = { version = "1.32.0", features = ["full"] }
#async-trait = "0.1.74"
#futures-util = "0.3"
md5 = "0.7"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6"
actix-web = "4.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
serde_cbor = "0.11"
Inflector = "0.11"
rust-i18n = "2.2"
rust_decimal = { version = "1.32"}
